@@ -825,6 +825,8 @@ def compile_select(select, targets_environ, postings_environ, entries_environ):
     # targets and the where clause.
     from_clause = select.from_clause
     if isinstance(from_clause, query_parser.Select):
+        # FIXME: This subcall will fail... fix it. Don't compile, just raise the
+        # error, this is for the rewrite...
         c_from = compile_select(from_clause) if from_clause is not None else None
         environ_target = ResultSetEnvironment()
         environ_where = ResultSetEnvironment()
