@@ -3,6 +3,7 @@
 __copyright__ = "Copyright (C) 2014-2016  Martin Blais"
 __license__ = "GNU GPLv2"
 
+import copy
 import collections
 import datetime
 import itertools
@@ -21,18 +22,21 @@ from beancount.core import prices
 from beancount.utils import misc_utils
 
 
-def filter_entries(c_from, entries, options_map):
+def filter_entries(c_from, entries, options_map, context):
     """Filter the entries by the given compiled FROM clause.
 
     Args:
       c_from: A compiled From clause instance.
       entries: A list of directives.
       options_map: A parser's option_map.
+      context: A prototype of RowContext to use for evaluation.
     Returns:
       A list of filtered entries.
     """
     assert c_from is None or isinstance(c_from, query_compile.EvalFrom)
     assert isinstance(entries, list)
+
+    context = copy.copy(context)
 
     if c_from is None:
         return entries
@@ -58,9 +62,14 @@ def filter_entries(c_from, entries, options_map):
     # Filter the entries with the FROM clause's expression.
     c_expr = c_from.c_expr
     if c_expr is not None:
-        entries = [entry
-                   for entry in entries
-                   if c_expr(entry)]
+        # A simple function receives a context; how come close_date() is
+        # accepted in the context of a FROM clause? It shouldn't be.
+        new_entries = []
+        for entry in entries:
+            context.entry = entry
+            if c_expr(context):
+                new_entries.append(entry)
+        entries = new_entries
 
     return entries
 
@@ -75,7 +84,8 @@ def execute_print(c_print, entries, options_map, file):
       file: The output file to print to.
     """
     if c_print and c_print.c_from is not None:
-        entries = filter_entries(c_print.c_from, entries, options_map)
+        context = create_row_context(entries, options_map)
+        entries = filter_entries(c_print.c_from, entries, options_map, context)
 
     # Create a context that renders all numbers with their natural
     # precision, but honors the commas option. This is kept in sync with
@@ -152,6 +162,21 @@ def uses_balance_column(c_expr):
             any(uses_balance_column(c_node) for c_node in c_expr.childnodes()))
 
 
+def create_row_context(entries, options_map):
+    """Create the context container which we will use to evaluate rows."""
+    context = RowContext()
+    context.balance = inventory.Inventory()
+
+    # Initialize some global properties for use by some of the accessors.
+    context.options_map = options_map
+    context.account_types = options.get_account_types(options_map)
+    context.open_close_map = getters.get_account_open_close(entries)
+    context.commodity_map = getters.get_commodity_map(entries)
+    context.price_map = prices.build_price_map(entries)
+
+    return context
+
+
 def execute_query(query, entries, options_map):
     """Given a compiled select statement, execute the query.
 
@@ -165,11 +190,6 @@ def execute_query(query, entries, options_map):
         result_rows: A list of ResultRow tuples of length and types described by
           'result_types'.
     """
-    # Filter the entries using the FROM clause.
-    filt_entries = (filter_entries(query.c_from, entries, options_map)
-                    if query.c_from is not None else
-                    entries)
-
     # Figure out the result types that describe what we return.
     result_types = [(target.name, target.c_expr.dtype)
                     for target in query.c_targets
@@ -194,23 +214,17 @@ def execute_query(query, entries, options_map):
     order_indexes = query.order_indexes
 
     # Figure out if we need to compute balance.
-    balance = None
-    if any(uses_balance_column(c_expr)
-           for c_expr in itertools.chain(
-               [c_target.c_expr for c_target in query.c_targets],
-               [query.c_where] if query.c_where else [])):
-        balance = inventory.Inventory()
+    uses_balance = any(uses_balance_column(c_expr)
+                       for c_expr in itertools.chain(
+                               [c_target.c_expr for c_target in query.c_targets],
+                               [query.c_where] if query.c_where else []))
 
-    # Create the context container which we will use to evaluate rows.
-    context = RowContext()
-    context.balance = balance
+    context = create_row_context(entries, options_map)
 
-    # Initialize some global properties for use by some of the accessors.
-    context.options_map = options_map
-    context.account_types = options.get_account_types(options_map)
-    context.open_close_map = getters.get_account_open_close(entries)
-    context.commodity_map = getters.get_commodity_map(entries)
-    context.price_map = prices.build_price_map(entries)
+    # Filter the entries using the FROM clause.
+    filt_entries = (filter_entries(query.c_from, entries, options_map, context)
+                    if query.c_from is not None else
+                    entries)
 
     # Dispatch between the non-aggregated queries and aggregated queries.
     c_where = query.c_where
@@ -231,8 +245,8 @@ def execute_query(query, entries, options_map):
                     context.posting = posting
                     if c_where is None or c_where(context):
                         # Compute the balance.
-                        if balance is not None:
-                            balance.add_position(posting)
+                        if uses_balance:
+                            context.balance.add_position(posting)
 
                         # Evaluate all the values.
                         values = [c_expr(context) for c_expr in c_target_exprs]
@@ -276,8 +290,8 @@ def execute_query(query, entries, options_map):
                     context.posting = posting
                     if c_where is None or c_where(context):
                         # Compute the balance.
-                        if balance is not None:
-                            balance.add_position(posting)
+                        if uses_balance:
+                            context.balance.add_position(posting)
 
                         # Compute the non-aggregate expressions.
                         row_key = tuple(c_expr(context)
